--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,6 +8,8 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+			<link rel="shortcut icon" th:href="@{/images/favicon.ico}" />
+
 		<!-- back to top CSS-->
 			<link rel="stylesheet"
 				href="..static/backToTop/css/reset.css"
@@ -84,12 +86,12 @@
  			<link rel="stylesheet"
 				href="..static/bootstrapSelect/css/bootstrapSelect.min.css"
 				th:href="@{/bootstrapSelect/css/bootstrapSelect.min.css}" />
-				
+
 		 	<!-- jquery -->
  			<link rel="stylesheet"
 				href="..static/css/draggable/jquery-ui.css"
 				th:href="@{/css/draggable/jquery-ui.css}" />
-				
+
 
 			<!-- select2 -->
 			<link rel="stylesheet"
